# sloosh-ios

./: AGENT.MD  README.md  codemagic.yaml  runs.json  test.swift  подписка
SlooshIOS.xcodeproj/: project.pbxproj
SlooshIOS/neomovies-api-main/: .env.example  .gitignore  .vercelignore  Cargo.toml  LICENSE  README.md  vercel.json
SlooshIOS/neomovies-api-main/api/: index.rs
SlooshIOS/neomovies-api-main/docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
SlooshIOS/neomovies-api-main/docs/docs/: authentication.md  getting-started.md
SlooshIOS/neomovies-api-main/docs/docs/guides/: search.md
SlooshIOS/neomovies-api-main/docs/src/css/: custom.css
SlooshIOS/neomovies-api-main/docs/src/data/: translations.ts
SlooshIOS/neomovies-api-main/docs/static/: openapi.yaml
SlooshIOS/neomovies-api-main/scripts/: vercel-build.sh
SlooshIOS/neomovies-api-main/src/: config.rs  db.rs  lib.rs  response.rs  server.rs
SlooshIOS/neomovies-api-main/src/auth/: jwt.rs  middleware.rs  mod.rs
SlooshIOS/neomovies-api-main/src/handlers/: auth.rs  cdn_player.rs  favorites.rs  health.rs  hls_proxy.rs  images.rs  media.rs  mod.rs  players.rs  search.rs  stream.rs  support.rs  torrents.rs  webhook.rs
SlooshIOS/neomovies-api-main/src/models/: favorite.rs  mod.rs  user.rs
SlooshIOS/neomovies-api-main/src/services/: cdn.rs  kinopoisk.rs  mod.rs  neoid.rs  players.rs  torrents.rs
SlooshIOS/neomovies-api-main/tests/: prop_auth_middleware.proptest-regressions  prop_auth_middleware.rs  prop_favorites.rs  prop_jwt.rs  prop_response.rs  prop_search.rs  prop_user.rs
(+302 files in other folders)
